--- a/middleware/marker_detection/package.xml
+++ b/middleware/marker_detection/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package>
   <name>marker_detection</name>
-  <version>0.0.0</version>
+  <version>1.0.0</version>
   <description>The marker_detection package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="robin@todo.todo">robin</maintainer>
+  <maintainer email="r.w.p.hoogervorst@student.utwente.nl">Robin Hoogervorst</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -42,12 +42,12 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>dynamic_reconfigure</build_depend>
   <build_depend>apriltags</build_depend>
-  <build_depend>rospy</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
+  <run_depend>apriltags</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
